🔥 Crash Recovery: Breathing Hexeract GUI + Code Registry + Full Documentation
- Breathing 6D Hexeract visualization (64 vertices, 192 edges)
- Viscoelastic heartbeat dynamics (Carreau-Yasuda shear thinning)
- Quorum consensus with topological homology (43/64 threshold)
- Gossip propagation across 192-edge anti-entropy network
- Ollama SLM agent chat (37 models loaded)
- Express.js backend (port 8080) with Hexeract state API
- AegisSwingSphere Java GUI (3D rotating sphere with telemetry)
- NEVER-MAKE-CODE-TWICE database (110 code pages registered)
- Full README with ASCII topological file tree
- BLUEPRINT.md with architecture diagrams
- CHANGELOG.md with recovery log